feat: redirect / to /growth via _redirects and template

--- a/zola_site/templates/index.html
+++ b/zola_site/templates/index.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<meta http-equiv="refresh" content="0; url=/growth/" />
+<script>location.replace('/growth/');</script>
 <p><a href="/growth/">进入：成长足迹</a></p>
 {% endblock content %}
